feat: update ui with fomantic

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@eslint/js": "^9.27.0",
     "@types/jest": "^29.5.14",
+    "@types/jquery": "^3.5.32",
     "@types/node": "^22.15.26",
     "@types/webextension-polyfill": "^0.12.3",
     "chrome-launcher": "^1.2.0",
